[package]
name = "black76_wasm"
version = "0.20.0"
edition = "2021"
license = "MIT"
description = "Black76 option pricing model calculator"
repository = "https://github.com/hayden4r4/black76-wasm"
documentation = "https://docs.rs/black76"
readme = "README.md"
authors = ["Hayden Rose"]
keywords = ["finance", "option", "WASM", "black76", "option-pricing"]

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.15"
statrs = "0.16.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }